# nix

./: flake.nix  meson.options
contrib/: fake-binary-cache.sh
doc/manual/: meson.options
packaging/: components.nix  dependencies.nix  everything.nix
src/libcmd/: package.nix
src/libexpr/: package.nix
src/libmain/: meson.build  package.nix  shared.cc
src/libstore/: common-protocol.cc  daemon.cc  misc.cc  package.nix  remote-store.cc  store-api.cc  worker-protocol.cc
src/libstore/include/nix/store/: common-protocol.hh  store-api.hh  worker-protocol-impl.hh  worker-protocol.hh
src/nix/: package.nix
